adonis-db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 (06a2e56)
  creationTimestamp: null
  labels:
    io.kompose.service: adonis-db
  name: adonis-db
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: adonis-db
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: test
        - name: MYSQL_PASSWORD
          value: password
        - name: MYSQL_ROOT_PASSWORD
          value: P@ssw0rd
        - name: MYSQL_USER
          value: walid
        image: mysql
        name: mysql-app
        resources: {}
      restartPolicy: Always
status: {}
