glusterfs-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: glusterfs2
spec:
  containers:
  - name: glusterfs
    image: nginx
    ports:
    - containerPort: 80

    volumeMounts:
    - name: glusterfsvol
      mountPath: "/usr/share/nginx/html"
      
  volumes:
  - name: glusterfsvol
    glusterfs:
      endpoints: glusterfs-cluster
      path: vol01
      readOnly: false
