adonis-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: adonis-service
spec:
  type:  NodePort
  selector:
    app: web
  ports:
  - name: http
    protocol: TCP
    port: 80 
    targetPort: 80
