glusterfs-service.yaml
---
kind: Service
apiVersion: v1
metadata:
 name: glusterfs-cluster
spec:
 ports:
 - port: 1729
