hive-api-service8.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hive-logic-api
  labels:
    app: hive-logic-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hive-logic-api
  template:
    metadata:
      labels:
        app: hive-logic-api
    spec:
      containers:
      - name: hiveapi
        image: skilldna-ml1:5000/hive-logic-api
        ports:
        - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: walid-service8
spec:
  type:  NodePort
  selector:
    app: hive-logic-api
  ports:
  - name: http
    protocol: TCP
    port: 80 
    targetPort: 80
