nginx-gluster-service3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-walid3
  labels:
    app: walid3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: walid3
  template:
    metadata:
      labels:
        app: walid3
    spec:
            # hostNetwork: true
      containers:
      - name: nginx
        image: nginx:1.14.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: glusterfsvol
          mountPath: /usr/share/nginx/html
      volumes:
      - name: glusterfsvol
        glusterfs:
              endpoints: glusterfs-cluster
              path: vol01/walid3
              readOnly: false

---

kind: Service
apiVersion: v1
metadata:
  name: walid-service3
spec:
  type: NodePort      
  selector:
    app: walid3
  ports:
  - name: http
    protocol: TCP
    port: 80 
    targetPort: 80
