node-service6.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
            #      hostNetwork: true
      containers:
      - name: node-web-app
        image: skilldna-ml1:5000/node-web-app
        ports:
        - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: walid-service6
spec:
  type:  NodePort
  selector:
    app: node-app
  ports:
  - name: http
    protocol: TCP
    port: 80 
    targetPort: 80
