ingress-app10.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: adonis 
  annotations:
          ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: adonis.walidtest.com
    http:
      paths: 
      - path: 
        backend:
            serviceName: web
            servicePort: 80
