ingress-app3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-walid3
  annotations:
          ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app3.walidtest.com
    http:
      paths: 
      - path: 
        backend:
            serviceName: walid-service3
            servicePort: 80
