ingress-app5.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
    name: app5.walidtest.com
    namespace: default
  spec:
    rules:
      - host: app5.walidtest.com
        http:
          paths:
            - backend:
                serviceName: walid-service5
                servicePort: 80
              path: /
    # This section is only required if TLS is to be enabled for the Ingress
#    tls:
#        - hosts:
 #           - www.example.com
  #        secretName: example-tls
